name:              pure-conjurer
version:           0.8.0.0
homepage:          purehs.org/doc/pure-conjurer
author:            Sean Hickman
maintainer:        sean@grumply.com
license:           BSD3
license-file:      LICENSE
cabal-version:     >= 1.10
build-type:        Simple

source-repository head
  type: git
  location: https://github.com/grumply/pure-conjurer.git

library
  hs-source-dirs:
      src

  build-depends:
      base
    , pure-auth
    , pure-elm
    , pure-hooks
    , pure-json
    , pure-maybe
    , pure-txt
    , pure-router
    , pure-sync
    , pure-websocket
    , pure-sorcerer
    , hashable
    , text

  exposed-modules:
    Pure.Conjurer
    Pure.Conjurer.Form
    Pure.Conjurer.Form.Field

  default-language: Haskell2010

  default-extensions:
    DerivingStrategies
    TypeFamilies
    FlexibleContexts
    UndecidableInstances
    DeriveGeneric
    DeriveAnyClass
    FlexibleInstances
    TemplateHaskell
    AllowAmbiguousTypes
    RankNTypes
    DataKinds
    PartialTypeSignatures
    TypeApplications
    ScopedTypeVariables
    DuplicateRecordFields
    StandaloneDeriving
    MultiParamTypeClasses
    NamedFieldPuns
    RecordWildCards
    PatternSynonyms
    BlockArguments
    LambdaCase
    CPP
    DerivingVia
    OverloadedStrings
    DefaultSignatures
    TypeOperators
    InstanceSigs
    ExistentialQuantification