name:              pure-conjurer
version:           0.8.0.0
homepage:          purehs.org/doc/pure-conjurer
author:            Sean Hickman
maintainer:        sean@grumply.com
license:           BSD3
license-file:      LICENSE
cabal-version:     >= 1.10
build-type:        Simple

source-repository head
  type: git
  location: https://github.com/grumply/pure-conjurer.git

library
  hs-source-dirs:
      src

  build-depends:
      base
    , pure-auth
    , pure-default
    , pure-elm
    , pure-hooks
    , pure-json
    , pure-marker
    , pure-maybe
    , pure-render
    , pure-time
    , pure-txt
    , pure-router
    , pure-sync
    , pure-websocket
    , pure-websocket-cache
    , pure-sorcerer
    , bytestring
    , containers
    , hashable
    , text
    , directory
    , filepath
    , stm

  exposed-modules:
    Pure.Conjurer
    Pure.Conjurer.Analytics
    Pure.Conjurer.API
    Pure.Conjurer.Callbacks
    Pure.Conjurer.Context
    Pure.Conjurer.Creatable
    Pure.Conjurer.Fieldable
    Pure.Conjurer.Formable
    Pure.Conjurer.Index
    Pure.Conjurer.Interactions
    Pure.Conjurer.Listable
    Pure.Conjurer.Key
    Pure.Conjurer.Name
    Pure.Conjurer.Pathable
    Pure.Conjurer.Permissions
    Pure.Conjurer.Previewable
    Pure.Conjurer.Previews
    Pure.Conjurer.Producible
    Pure.Conjurer.Readable
    Pure.Conjurer.Resource
    Pure.Conjurer.Rootable
    Pure.Conjurer.Routable
    Pure.Conjurer.Slug
    Pure.Conjurer.Updatable

  default-language: Haskell2010

  default-extensions:
    DerivingStrategies
    TypeFamilies
    FlexibleContexts
    UndecidableInstances
    DeriveGeneric
    DeriveAnyClass
    FlexibleInstances
    TemplateHaskell
    AllowAmbiguousTypes
    RankNTypes
    DataKinds
    PartialTypeSignatures
    TypeApplications
    ScopedTypeVariables
    DuplicateRecordFields
    StandaloneDeriving
    MultiParamTypeClasses
    NamedFieldPuns
    RecordWildCards
    PatternSynonyms
    BlockArguments
    LambdaCase
    CPP
    DerivingVia
    OverloadedStrings
    DefaultSignatures
    TypeOperators
    InstanceSigs
    ExistentialQuantification
    RoleAnnotations
    FunctionalDependencies
    ViewPatterns
    BangPatterns
  
  if !impl(ghcjs)
    build-depends:
      iproute